# hualiedu

./: .autoenv  .coveragerc  .env.example  .env.local  .envrc  .gitignore  .gitignore.md  .pre-commit-config.yaml  .project_zshrc  AI_SCORING_ENHANCEMENT.md  API_SECURITY_BEST_PRACTICES.md  BATCH_SCORING_REPORT.md  CALENDAR_FEATURE_GUIDE.md  CHANGELOG.md  COMMENT_CACHE_FEATURE.md  CONTRIBUTING.md  Dockerfile  ENVIRONMENT_SETUP.md  LICENSE  MANUAL_GRADING_IMPLEMENTATION.md  MULTI_TENANT_SYSTEM.md  Makefile  QUICKSTART_UV.md  README.md  REPOSITORY_TEST_REPORT.md  SEMESTER_STATUS_FEATURE.md  TASK_5_IMPLEMENTATION_SUMMARY.md  TEST_IMPLEMENTATION_SUMMARY.md  activate.sh  check_project_status.py  check_status.py  conda-project.yml  db.sqlite3  db.sqlite3.backup  db.sqlite3.backup_20251108_183802  docker-compose.yml  env.example  environment.yml  manage_py313.py  pyproject.toml  (+19 more)
backend/: Makefile  README.md  env.example  manage.py  pyproject.toml
backend/grading/: __init__.py  admin.py  api_views.py  apps.py  assignment_views.py  cache_manager.py  docx_grade_utils.py  forms.py  models.py  startup_sync.py  urls.py  views.py
backend/grading/management/commands/: clear_cache.py  import_homeworks.py  scan_courses.py  update_course_types.py  update_teacher_name.py
backend/grading/migrations/: 0001_initial.py  0002_remove_repository_branches_repository__branches_and_more.py  0003_submission_teacher_comments.py  0004_repository_owner.py  0005_alter_repository__branches_alter_repository_name_and_more.py  0006_gradetypeconfig.py  0009_course_class_name_courseweekschedule.py  0011_add_repository_owner.py  0014_merge_20251108_1157.py  0015_add_course_type.py  0019_alter_repository_owner_field.py  0022_fix_missing_tenant_repo_dir.py  0023_update_models_for_homework_grading_system.py  0025_class_grading_cla_course__e2468b_idx_and_more.py  0028_alter_assignment_git_url_to_charfield.py  0029_filegradestatus.py  0030_filegradestatus_last_graded_commit.py  0032_alter_assignment_course_class_nullable.py  0033_assignment_setting.py
backend/grading/services/: assignment_management_service.py  class_service.py  filesystem_storage_adapter.py  git_storage_adapter.py  grade_registry_writer_service.py  repository_service.py  semester_auto_creator.py  semester_detector.py  semester_manager.py  semester_status.py
backend/grading/templates/: class_list.html  grade_registry_writer.html  homework_upload.html  semester_edit.html  semester_status_widget.html
backend/grading/templatetags/: __init__.py
backend/grading/tests/: test_ai_scoring.py  test_assignment_model.py  test_assignment_utils_properties.py  test_assignment_views.py  test_comment_integration.py  test_core_functions.py  test_end_to_end.py  test_git_storage_adapter_properties.py  test_grade_registration.py  test_grade_registry_writer.py  test_grade_registry_writer_service.py  test_integration_workflows.py  test_middleware.py  test_percentage_grading.py  test_repository_service.py  test_semester_detector.py  test_semester_manager.py  test_semester_naming.py  test_semester_time.py  test_url_routing.py  test_views_api.py  test_views_comprehensive.py  test_views_integration.py
backend/hualiEdu/: middleware.py  settings.py  urls.py
backend/tests/: test_manual_test_save_teacher_comment.py
backend/toolbox/: admin.py  api_views.py  models.py  urls.py  views.py
backend/toolbox/migrations/: 0001_initial.py
backend/toolbox/tests/: test_grade_import.py
(+383 files in other folders)
